--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "n8n",
     "n8n-nodes",
     "n8n-community-node",
+    "n8n-community-node-package",
     "pdf",
     "pdf-to-image",
     "ocr",
