--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "@prokodo/n8n-nodes-pdf-toolkit",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "PDF toolkit for n8n (merge, split, images, OCR)",
   "author": "prokodo <info@prokodo.com>",
   "license": "MIT",
   "type": "commonjs",
   "main": "dist/index.js",
+  "engines": {
+    "node": ">=18"
+  },
   "files": [
     "dist",
     "README.md",
@@ -36,14 +39,20 @@
     ]
   },
   "dependencies": {
-    "canvas": "^2.11.2",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "3.11.174",
     "tesseract.js": "^5.1.0"
   },
+  "devDependencies": {
+    "tslib": "^2.6.2",
+    "typescript": "^5.6.3"
+  },
   "peerDependencies": {
     "n8n-core": ">=1.88.0 <2",
     "n8n-workflow": ">=1.88.0 <2"
+  },
+  "optionalDependencies": {
+    "canvas": "^2.11.2"
   },
   "scripts": {
     "build": "tsc && mkdir -p dist/nodes/PdfTools && cp -f src/nodes/PdfTools/*.{svg,png} dist/nodes/PdfTools/ 2>/dev/null || true",
